==> PRIYALEELA25/AVR-_ENTRY-/BMP280_TEMP_OLED/GccApplication1/GccApplication1/i2c.c <==
/*
 * i2c.c
 *
 * Created: 24-06-2026 21:04:58
 *  Author: hp
 */ 
#include "i2c.h"

void i2c_init(void) {
	
	TWBR = 72;
	TWSR = 0; // Prescaler = 1
}

void i2c_start(void) {
	TWCR = (1<<TWINT) | (1<<TWSTA) | (1<<TWEN);
	while (!(TWCR & (1<<TWINT)));
}

void i2c_stop(void) {
	TWCR = (1<<TWINT) | (1<<TWSTO) | (1<<TWEN);
	while (TWCR & (1<<TWSTO));
}

void i2c_write(uint8_t data) {
	TWDR = data;
	TWCR = (1<<TWINT) | (1<<TWEN);
	while (!(TWCR & (1<<TWINT)));
}

uint8_t i2c_read_ack(void) {
	TWCR = (1<<TWINT) | (1<<TWEN) | (1<<TWEA);
	while (!(TWCR & (1<<TWINT)));
	return TWDR;
}

uint8_t i2c_read_nack(void) {
	TWCR = (1<<TWINT) | (1<<TWEN);
	while (!(TWCR & (1<<TWINT)));
	return TWDR;
}
